# example-kserve-custom-model

./: Dockerfile  README.md  input.json  model.py  pyproject.toml
