[tool.poetry]
name = "custom-model"
version = "0.12.0rc1"
description = "Custom model implementation. Not intended for use outside KServe Frameworks Images."
authors = ["The KServe Authors"]
license = "https://github.com/kserve/kserve/blob/master/LICENSE"

[tool.poetry.dependencies]
python = ">=3.9,<3.12"
kserve = "0.11.0"
# torchvision = {version = "0.15.1"}
# torchvision = {version = "0.15.1+cpu", source = "pytorch"}
# torch = {version = "2.0.0"}
# torch = {version = "2.0.0", source = "pytorch"}
# pillow = "~9.3.0"


# [[tool.poetry.source]]
# name = "pytorch"
# url = "https://download.pytorch.org/whl/cpu"

# [tool.poetry-version-plugin]
# source = "file"
# file_path = "../VERSION"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
